# pythonProject2

./: .coverage  .env  .env.example  README.md  bash  main.py  pyproject.toml  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: README  README.md  __init__.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  transactions_reader.py  utils.py  widget.py
tests/: __init__.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_transactions_reader.py  test_utils.py  test_widget.py
